fix the off-center link

--- a/app/assets/stylesheets/_dan.scss
+++ b/app/assets/stylesheets/_dan.scss
@@ -49,6 +49,7 @@
 		background: #efefef;
 		padding: 5px;
 	}
+	height: 280px;
 }
 
 .jumbotron p {
